# RP2040-TestPatternGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  pico_sdk_import.cmake  picovga_import.cmake
.github/workflows/: cmake-single-platform.yml
img/: circles.cpp  circles.h  colourbars.cpp  colourbars.h  colourgradients.cpp  colourgradients.h  grid.cpp  grid.h  monoscope.cpp  monoscope.h  white.cpp  white.h
plots/: RP2040-TestPatternGenerator-B_Cu.gbl  RP2040-TestPatternGenerator-B_Mask.gbs  RP2040-TestPatternGenerator-B_Paste.gbp  RP2040-TestPatternGenerator-B_Silkscreen.gbo  RP2040-TestPatternGenerator-Edge_Cuts.gm1  RP2040-TestPatternGenerator-F_Cu.gtl  RP2040-TestPatternGenerator-F_Mask.gts  RP2040-TestPatternGenerator-F_Paste.gtp  RP2040-TestPatternGenerator-F_Silkscreen.gto  RP2040-TestPatternGenerator-NPTH-drl_map.gbr  RP2040-TestPatternGenerator-NPTH.drl  RP2040-TestPatternGenerator-PTH-drl_map.gbr  RP2040-TestPatternGenerator-PTH.drl
sch/: RP2040-TestPatternGenerator-VGA-Comp.kicad_pcb  RP2040-TestPatternGenerator-VGA-Comp.kicad_prl  RP2040-TestPatternGenerator-VGA-Comp.kicad_sch  RP2040-TestPatternGenerator-VGA.kicad_pcb  RP2040-TestPatternGenerator-VGA.kicad_prl  RP2040-TestPatternGenerator-VGA.kicad_pro  RP2040-TestPatternGenerator-VGA.kicad_sch  fp-lib-table  sym-lib-table
sch/lib/AD724JRZ/KiCADv6/: 2024-02-21_13-35-26.kicad_sym
sch/lib/AD724JRZ/KiCADv6/footprints.pretty/: RW_16_ADI-L.kicad_mod  RW_16_ADI-M.kicad_mod  RW_16_ADI.kicad_mod
sch/lib/RCJ-044/: CUI_RCJ-044.kicad_mod  RCJ-044.lib
sch/lib/kleeb/: mcu.kicad_sym
sch/lib/kleeb/mcu.pretty/: rp2040-zero-smd-pads-cutout.kicad_mod  rp2040-zero-smd-pads.kicad_mod  rp2040-zero-smd.kicad_mod  rp2040-zero-tht-pads-cutout.kicad_mod  rp2040-zero-tht-pads.kicad_mod  rp2040-zero-tht.kicad_mod
src/: main.cpp  vga_config.h
tools/: png2hex.py
